--- a/annotation/analyse_annotations.ipynb
+++ b/annotation/analyse_annotations.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1df17180",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "44f6f7d8",
    "metadata": {},
